reasser menu en html

--- a/about.html
+++ b/about.html
@@ -16,7 +16,28 @@
 </head>
 
 <body>
-    <?php require "header.php"?>
+    <header>
+        <div class="container">
+            <div class="branding">
+              <a href="index.html"><img src="img/logo-gsb2.png" alt="" class="logo_gsb"></a> 
+            </div>
+            <nav class="header-nav">
+                <ul>
+                    <li class="active"><a href="index.html">Accueil</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="nouveaute.html">Nouveaute</a></li>
+                    <li><a href="galerie.html">Galerie</a></li>
+                    <li><a href="contact.html">Contact</a></li>                  
+                </ul>
+                
+            <!-- connexion / register -->
+            <ul id="ident" class="member-ident">
+                <li class="member member-register"><a class="awesome white" href="connexion/register.html">S'inscrire</a></li>
+                <li class="member member-login"><a class="awesome blue" href="connexion/account.html">Connexion</a></li>
+            </ul>
+            </nav>
+        </div>
+    </header>
 
     <section class="showcase">
         <div class="container"></div>
