--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header>
         <div class="container">
             <div class="branding">
-              <a href="index.php"><img src="img/logo-gsb2.png" alt="" class="logo_gsb"></a> 
+              <a href="index.html"><img src="img/logo-gsb2.png" alt="" class="logo_gsb"></a> 
             </div>
             <nav class="header-nav">
                 <ul>
