--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 
 // tableau vide errors
  $errors = [];
@@ -38,7 +38,7 @@ if(count($_POST)) {
         mail($to, $_POST['sujet'], $message, $headers);
     }
 }
-?>
+?> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
